# lm-foundations

./: .gitignore  LICENSE  LICENSE-TEXT.md  README.md  package-lock.json  package.json  pyproject.toml
data/: tiny_corpus.txt
exercises/: 01_first_principles.md  02_training_and_generation.md  03_beyond_transformers.md  quantization.md
notebooks/: 00_project_orientation.ipynb  01_tensors_autograd_and_probability.ipynb  02_text_tokenization_char_to_subword.ipynb  03_embeddings_and_language_modeling.ipynb  04_attention_from_raw_tensors.ipynb  05_transformer_block_from_scratch.ipynb  06_training_loop_loss_and_optimization.ipynb  07_generation_sampling_and_evaluation.ipynb  08_finetuning_toy_instruction_task.ipynb  09_hugging_face_translation_layer.ipynb  10_quantization_deep_dive.ipynb  11_modern_llm_orientation.ipynb  12_beyond_transformers_and_world_models.ipynb  13_research_orientation.ipynb  14_attention_as_kernel_operator.ipynb  15_sparse_attention_patterns.ipynb  16_linear_kernel_attention.ipynb  17_low_rank_attention.ipynb  18_kv_cache_inference.ipynb  19_long_context_evaluation.ipynb  20_state_space_models.ipynb  21_selective_recurrence_mamba_toy.ipynb  22_moe_conditional_compute.ipynb  23_scaling_laws_lab.ipynb  24_optimization_at_scale.ipynb  99_complete_college_level_walkthrough.ipynb  the_machine_that_predicts_the_next_token.ipynb
output/: interactive_textbook.html  interactive_textbook_v1_original.html  the_machine_that_predicts_the_next_token.html  viz_data.json
scripts/: _eq_readings.py  _eq_readings_v2.py  _eq_readings_v3.py  _eq_readings_v4.py  (+9 more)
(+95 files in other folders)
