[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "A math-forward notebook curriculum for building a toy LLM from scratch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.6",
  "numpy>=2.0",
  "matplotlib>=3.9",
  "jupyterlab>=4.3",
  "ipykernel>=6.29",
  "datasets>=3.0",
  "pyyaml>=6.0.3",
  "tokenizers>=0.20",
  "transformers>=4.48",
  "accelerate>=1.0",
  "safetensors>=0.5",
  "tqdm>=4.67",
  "rich>=13.9",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "nbclient>=0.10",
  "nbformat>=5.10",
  "ruff>=0.9",
]
quantization = [
  "torchao>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
